Removed ui sample

--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.epam.spring</groupId>
-    <artifactId>com.epam.spring.core.hometask</artifactId>
+    <groupId>com.epam.spring.core</groupId>
+    <artifactId>hometask-skeleton</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Spring Core Hometask Skeleton</name>
     <description>A skeleton project for the students of Spring Core MOOC course that can be used to do the hometask assignment</description>
@@ -104,22 +104,6 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context-support</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <scope>test</scope>
             <version>${spring.version}</version>
         </dependency>
 
