--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,15 @@
     <artifactId>hometask-skeleton</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Spring Core Hometask Skeleton</name>
-    <description>A skeleton project for the students of Spring Core MOOC course that can be used to do the hometask assignment</description>
+    <description>
+        A skeleton project for the students of Spring Core MOOC course that can be used to do the hometask assignment
+    </description>
 
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <spring.version>3.2.16.RELEASE</spring.version>
+        <spring.version>5.0.1.RELEASE</spring.version>
         <findbugs.version>3.0.1</findbugs.version>
         <junit.version>4.12</junit.version>
     </properties>
@@ -119,6 +121,18 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+
+
     </dependencies>
     <organization>
         <name>EPAM Systems</name>
